--- a/AIdioo/package.json
+++ b/AIdioo/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/ui": "~0.2.0-beta.7",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -18,15 +19,26 @@
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.19",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
+    "expo-device": "~8.0.9",
+    "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
+    "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-local-authentication": "~17.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.13",
+    "expo-secure-store": "~15.0.7",
+    "expo-sms": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "moti": "^0.30.0",
     "nativewind": "^5.0.0-preview.2",
