--- a/AIdioo/package.json
+++ b/AIdioo/package.json
@@ -41,7 +41,6 @@
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "moti": "^0.30.0",
-    "nativewind": "^5.0.0-preview.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -57,6 +56,8 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "nativewind": "^4.2.1",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   },
   "private": true
