--- a/AIdioo/.vscode/settings.json
+++ b/AIdioo/.vscode/settings.json
@@ -2,6 +2,12 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit",
     "source.organizeImports": "explicit",
-    "source.sortMembers": "explicit"
+    "source.sortMembers": "explicit",
+    "tailwindCSS.experimental.classRegex": [
+      [
+        "tva\\((([^()]*|\\([^()]*\\))*)\\)",
+        "[\"'`]([^\"'`]*).*?[\"'`]"
+      ]
+    ]
   }
 }
