--- a/AIdioo/package.json
+++ b/AIdioo/package.json
@@ -11,53 +11,69 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.12.5",
     "@expo/ui": "~0.2.0-beta.7",
     "@expo/vector-icons": "^15.0.3",
+    "@gluestack-ui/core": "^3.0.10",
+    "@gluestack-ui/utils": "^3.0.11",
+    "@gorhom/bottom-sheet": "^5.0.0-alpha.11",
+    "@hookform/resolvers": "^5.2.2",
+    "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.19",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo": "~54.0.25",
+    "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.16",
+    "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
-    "expo-glass-effect": "~0.1.4",
+    "expo-glass-effect": "~0.1.7",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.9",
     "expo-local-authentication": "~17.0.7",
-    "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.13",
+    "expo-notifications": "~0.32.13",
+    "expo-router": "~6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-sms": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-sqlite": "~16.0.8",
+    "expo-splash-screen": "~31.0.11",
+    "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
+    "expo-updates": "~29.0.13",
+    "expo-web-browser": "~15.0.9",
+    "lucide-react-native": "^0.510.0",
     "moti": "^0.30.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.1.0",
+    "react-aria": "^3.33.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.1",
     "react-native": "0.81.5",
     "react-native-css": "^3.0.1",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "^0.5.1",
+    "react-stately": "^3.39.0",
+    "tailwind-variants": "^0.1.20",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "nativewind": "^4.2.1",
-    "tailwindcss": "^3.4.18",
+    "nativewind": "^4.1.23",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
   "private": true
